# gocomics.py

./: .pylintrc  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml
docs/: conf.py  index.rst
gocomics/: __init__.py  comic.py  endpoints.py  list.py  utils.py
tests/: test_comic.py  test_utils.py
