[tool.poetry]
name = "gocomics.py"
version = "2.1.0"
description = "Fetch comics from GoComics."
authors = ["Ombucha <omkaar.nerurkar@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Ombucha/gocomics.py/"
documentation = "https://gocomics.readthedocs.io/"
keywords = ["python", "gocomics", "comics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = ["gocomics"]

[tool.poetry.dependencies]
beautifulsoup4 = "*"
requests = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Ombucha/gocomics.py/issues"
